<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".LoginPage">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/side_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/side_menu"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"

            />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_border">

        <TextView
            android:id="@+id/log_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/login_topic"
            android:textColor="#1F2880"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/log_topic"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/payment_input"
            android:drawableStart="@drawable/username_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/username_log"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#878787"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/login_username"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/payment_input"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/password_log"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#878787"
            tools:ignore="RtlSymmetry" />


        <Button
            android:id="@+id/log_btn"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_below="@+id/login_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_btn"
            android:text="@string/login_btn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgot_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_btn"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/forget_link"
            android:textColor="#447EEE"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/backto_sign_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget_btn"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/back_signin"
            android:textColor="#1F2880"
            android:textSize="13sp" />

    </RelativeLayout>


</RelativeLayout>