<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CustomerRegister"

    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_gradient">

        <LinearLayout
            android:id="@+id/container_topic_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/side_menu_register"
                android:layout_marginStart="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:src="@drawable/side_menu" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_body_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_topic_register"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_border"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_horizontal"
                android:text="@string/account_create_topic"
                android:textColor="#1F2880"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/payment_input"
                android:drawableStart="@drawable/username_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/register_user_name"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textColorHint="#878787"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/payment_input"
                android:drawableStart="@drawable/username_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/username_log"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textColorHint="#878787"
                tools:ignore="RtlSymmetry" />

            <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/payment_input"
            android:drawableStart="@drawable/email_pay"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/register_email"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#878787"
            tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/register_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/payment_input"
                android:drawableStart="@drawable/location_pay"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/register_Address"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textColorHint="#878787"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/payment_input"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/password_log"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textColorHint="#878787"
                tools:ignore="RtlSymmetry" />


            <Button
                android:id="@+id/register_btn"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_btn"
                android:text="@string/register_btn"
                android:textColor="@color/white" />

        </LinearLayout>



    </RelativeLayout>
</ScrollView>